# pseudo_rgbd_slam

./: .gitignore  PROGRESS.md  README.md
install/: local_setup.sh  setup.sh
install/pseudo_rgbd_slam/lib/pseudo_rgbd_slam/: node_a_broadcaster
install/pseudo_rgbd_slam/share/pseudo_rgbd_slam/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
pseudo_rgbd_slam/: package.xml  setup.cfg  setup.py
pseudo_rgbd_slam/launch/: pipeline.launch.py
pseudo_rgbd_slam/pseudo_rgbd_slam/: node_a_broadcaster.py  node_b_depth_estimator.py
pseudo_rgbd_slam_cpp/: CMakeLists.txt  package.xml
pseudo_rgbd_slam_cpp/src/: node_c_slam.cpp
